# ChangeLog for dev-ruby/feed_parser
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*feed_parser-0.3.5 (29 Jul 2013)

  29 Jul 2013; Hans de Graaff <graaff@gentoo.org> +feed_parser-0.3.5.ebuild:
  Version bump. Drop patches from 0.3.4-r1 since these have been applied
  upstream.

*feed_parser-0.3.4-r1 (26 Jul 2013)

  26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +feed_parser-0.3.4-r1.ebuild,
  +files/feed_parser-0.3.4-published.patch:
  Add patch to parse the published attribute.

*feed_parser-0.3.4 (26 Jul 2013)

  26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +feed_parser-0.3.4.ebuild,
  +metadata.xml:
  Initial import.
