@@ -1,2 +1,1 @@
-DIST feed_parser-0.3.4.gem 59392 SHA256 f79c299af43e6a5147c7db98b79c16b896ce70d245f9ee0cf395eb934fdeed07 SHA512 118723fd32ddb8ec9576667fe9e4e772934cfdcd3c2985bcc2584a643a71ae9843313390bcf0f3696c6985cd1404e165385e0e446f89cf2cbfa6b8e2d5df695e WHIRLPOOL 22e46c119d3d15d9f4fc33c4ab62ca1a4f29ebed5dd96d290e4e789a6be92f0a3b1aaf3becc5d15e9e6a54b157231b2b96fe85538779e0779634a795fc2ed55b
 DIST feed_parser-0.3.5.gem 59904 SHA256 019f84e1443a9512e8c5acd7f3c8740b96a6bc7f1abacf34a6ca0242a7a7b31c SHA512 bbc0a19a54b6c53bc40464a13dee5284721d4bbb5d3200b24e88773cf95545358b162ba7cc19c1c98f538e959584bcf76b15f0a76e3610c495f6908513b1a7ff WHIRLPOOL 0927b27acf849db0c316c112c012941b5ef48c848a998dff8429f845a9c7cc08d861606d46cd246ec614d190db638d75894abd689a1509a328289565b8313dc6
