@@ -1,23 +1,0 @@
-# Copyright 1999-2013 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=5
-USE_RUBY="ruby19"
-
-RUBY_FAKEGEM_EXTRADOC="README.md"
-
-RUBY_FAKEGEM_TASK_DOC=""
-RUBY_FAKEGEM_RECIPE_TEST="rspec"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Rss and Atom feed parser built on top of Nokogiri"
-HOMEPAGE="https://github.com/arttu/feed_parser"
-LICENSE="MIT"
-
-KEYWORDS="~amd64"
-SLOT="0"
-IUSE=""
-
-ruby_add_rdepend "dev-ruby/nokogiri"
