@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/feed_parser
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jul 2014; Hans de Graaff <graaff@gentoo.org> -feed_parser-0.3.4.ebuild,
+  -feed_parser-0.3.4-r1.ebuild:
+  Cleanup.
 
 *feed_parser-0.3.5 (29 Jul 2013)
 
